k8s/prd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: suanet-frontend-service
  namespace: suanet-prd
  labels:
    app: suanet-frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: suanet-frontend
